force-app/main/default/objects/Match_Player__c/Match_Player__c.object-meta.xml
<CustomObject>
    <label>Match Player</label>
    <pluralLabel>Match Players</pluralLabel>
    <nameField>
        <label>Match Player Name</label>
        <type>AutoNumber</type>
        <displayFormat>MP-{0000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>Junction object tracking players participating in each match.</description>
</CustomObject>