force-app/main/default/objects/Match_Player__c/fields/Match__c.field-meta.xml
<CustomField>
    <fullName>Match__c</fullName>
    <label>Match</label>
    <type>MasterDetail</type>
    <referenceTo>Match__c</referenceTo>
    <relationshipLabel>Match Players</relationshipLabel>
    <relationshipName>Match_Players</relationshipName>
</CustomField>