force-app/main/default/objects/Match_Player__c/fields/Player__c.field-meta.xml
<CustomField>
    <fullName>Player__c</fullName>
    <label>Player</label>
    <type>Lookup</type>
    <referenceTo>Player__c</referenceTo>
    <relationshipLabel>Match Players</relationshipLabel>
    <relationshipName>Match_Players</relationshipName>
    <required>true</required>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>