force-app/main/default/objects/Match_Player__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <label>Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Win</fullName><default>false</default><label>Win</label></value>
            <value><fullName>Lose</fullName><default>false</default><label>Lose</label></value>
            <value><fullName>Draw</fullName><default>false</default><label>Draw</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>